--- a/PaymentAPI/PaymentApp/src/app/payment-details/payment-detail-form/payment-detail-form.component.html
+++ b/PaymentAPI/PaymentApp/src/app/payment-details/payment-detail-form/payment-detail-form.component.html
@@ -1,1 +1,32 @@
-<p>payment-detail-form works!</p>
+<p>payment-detail-form</p>
+
+<form #form="ngForm" (submit)="onSubmit(form)" [class.submitted]="service.formSubmitted" novalidate autocomplete="off">
+
+    <input type="hidden" name="paymentDetailId" [value]="service.formData.paymentDetailId">
+
+    <div class="mb-3">
+        <label>Card Owner Name</label>
+        <input class="form-control form-control-lg" placeholder="Name on Card" #cardOwnerName="ngModel" [(ngModel)]="service.formData.cardOwnerName" name="cardOwnerName" required>
+    </div>
+
+    <div class="mb-3">
+        <label>Card Number</label>
+        <input class="form-control form-control-lg" placeholder="16 Digit Card Number" #cardNumber="ngModel" [(ngModel)]="service.formData.cardNumber" name="cardNumber" required minlength="16" maxlength="16">
+    </div>
+    <div class="row">
+    <div class="mb-3 col-6">
+        <label>Security Code</label>
+        <input class="form-control form-control-lg" placeholder="CVV" #securityCode="ngModel" [(ngModel)]="service.formData.securityCode" name="securityCode" type="password" required minlength="3" maxlength="3">
+    </div>
+
+    <div class="mb-3 col-6">
+        <label>Valid Through</label>
+        <input class="form-control form-control-lg" placeholder="MM/YY" #expirationDate="ngModel" [(ngModel)]="service.formData.expirationDate" name="expirationDate" required minlength="5" maxlength="5"> 
+    </div>
+</div>
+    <div class="d-grid">
+    <button class="btn btn-lg btn-success" type="submit">
+        Submit
+    </button>
+</div>  
+</form>
